Implementar end point de prices e logs
